--- a/index.html
+++ b/index.html
@@ -343,8 +343,7 @@
               <div class="project-card">
 
                 <figure class="card-banner img-holder" style="--width: 615; --height: 391;">
-                  <img src="./assets/images/project-1.png" width="615" height="391" loading="lazy"
-                    alt="UrbanThreads Shopify Storefront" class="img-cover">
+                  <video class="img-cover" width="615" height="391" src="./assets/images/project-1.mp4" aria-label="UrbanThreads Shopify Storefront" muted autoplay loop playsinline preload="metadata"></video>
                 </figure>
 
                 <div class="card-content">
@@ -370,8 +369,7 @@
               <div class="project-card">
 
                 <figure class="card-banner img-holder" style="--width: 615; --height: 391;">
-                  <img src="./assets/images/project-2.png" width="615" height="391" loading="lazy" alt="B2B Dashboard built with Next.js and Node"
-                    class="img-cover">
+                  <video class="img-cover" width="615" height="391" src="./assets/images/project-2.mp4" aria-label="B2B Dashboard built with Next.js and Node" muted autoplay loop playsinline preload="metadata"></video>
                 </figure>
 
                 <div class="card-content">
@@ -502,37 +500,22 @@
             <ul class="info-list">
               <li class="info-item">
                 <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
-                <a href="mailto:companyinfo@mail.com" class="info-link">companyinfo@mail.com</a>
+                <a href="mailto:companyinfo@mail.com" class="info-link">contact@kiwolabs.com</a>
               </li>
               <li class="info-item">
                 <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
-                <a href="tel:+0987654321" class="info-link">+098 765 4321</a>
+                <a href="tel:+0987654321" class="info-link">+377 44 390 610</a>
               </li>
               <li class="info-item">
                 <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
-                <span>123 Studio Ave, Design City</span>
+                <span>31-33, Avenue des Papalins, Fontvieille, Monaco, 98020</span>
               </li>
             </ul>
 
             <ul class="social-list">
               <li>
-                <a href="#" class="social-link" aria-label="Facebook">
-                  <ion-icon name="logo-facebook"></ion-icon>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="social-link" aria-label="Twitter">
-                  <ion-icon name="logo-twitter"></ion-icon>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="social-link" aria-label="Pinterest">
-                  <ion-icon name="logo-pinterest"></ion-icon>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="social-link" aria-label="Dribbble">
-                  <ion-icon name="logo-dribbble"></ion-icon>
+                <a href="https://www.linkedin.com/in/argzon/" class="social-link" aria-label="LinkedIn" target="_blank" rel="noopener">
+                  <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
               </li>
             </ul>
