update to portfolio

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             <a href="#about" class="navbar-link" data-nav-link data-i18n="nav.about">About</a>
           </li>
 
+          <li class="navbar-item">
+            <a href="./portfolio/index.html" class="navbar-link" data-nav-link data-i18n="nav.portfolio">Portfolio</a>
+          </li>
+
         </ul>
 
       </nav>
@@ -329,7 +333,7 @@
               </p>
             </div>
 
-            <a href="#" class="btn-link">
+            <a href="./portfolio/index.html" class="btn-link">
               <span class="span">Show More Projects</span>
 
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -613,6 +617,10 @@
 
           <li>
             <a href="#contact" class="footer-link" data-i18n="nav.contact">Contact Us</a>
+          </li>
+
+          <li>
+            <a href="./portfolio/index.html" class="footer-link" data-i18n="nav.portfolio">Portfolio</a>
           </li>
 
         </ul>
